@@ -55,11 +55,11 @@ dependencies {
     }
 
     implementation "com.github.cliftonlabs:json-simple:2.1.2"
-    implementation "org.json:json:20210307"
-
+    implementation "org.json:json:20220924"
     implementation 'org.jetbrains:annotations:16.0.2'
-
     implementation "io.grpc:grpc-netty-shaded:1.40.1"
+    implementation 'com.google.code.gson:gson:2.8.9'
+    implementation 'org.grpcmock:grpcmock-junit5:0.9.3'
 
     // JUnit annotations
     implementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
@@ -165,6 +165,8 @@ tasks.withType(JavaCompile).configureEach {
         disable("InlineMeSuggester")
         disable("DoNotCallSuggester")
 
+        disable("UnnecessarilyFullyQualified")
+
         if (name.contains("Jmh") || name.contains("Test")) {
             disable("MemberName")
         }
@@ -204,7 +206,7 @@ javadoc {
 
 group = "cloud.filibuster"
 archivesBaseName = "instrumentation"
-version = "1.1.16"
+version = "1.2.0"
 
 java {
     withJavadocJar()
@@ -280,3 +282,93 @@ Build-time: ${java.time.LocalDateTime.now()}
 }
 
 sourceSets.main.output.dir genOutputDir, builtBy: generateVersionTxt
+
+task unitTest(type: Test) {
+    useJUnitPlatform()
+
+    filter {
+        includeTestsMatching('cloud.filibuster.unit.*')
+    }
+}
+
+task integrationTest(type: Test) {
+    useJUnitPlatform()
+
+    maxParallelForks = 1
+    timeout = Duration.ofMinutes(60)
+    minHeapSize = "128m" // initial heap size
+    maxHeapSize = "2048m" // maximum heap size
+    jvmArgs '-XX:MaxPermSize=256m' // mem argument for the test JVM
+
+    filter {
+        includeTestsMatching('cloud.filibuster.integration.*')
+    }
+}
+
+task functionalJavaSmokeTest(type: Test) {
+    useJUnitPlatform()
+
+    maxParallelForks = 1
+    timeout = Duration.ofMinutes(60)
+    minHeapSize = "128m" // initial heap size
+    maxHeapSize = "2048m" // maximum heap size
+    jvmArgs '-XX:MaxPermSize=256m' // mem argument for the test JVM
+
+    filter {
+        includeTestsMatching('cloud.filibuster.functional.java.smoke.*')
+    }
+}
+
+task functionalJavaHelloTest(type: Test) {
+    useJUnitPlatform()
+
+    maxParallelForks = 1
+    timeout = Duration.ofMinutes(60)
+    minHeapSize = "128m" // initial heap size
+    maxHeapSize = "2048m" // maximum heap size
+    jvmArgs '-XX:MaxPermSize=256m' // mem argument for the test JVM
+
+    filter {
+        includeTestsMatching('cloud.filibuster.functional.java.hello.*')
+    }
+}
+
+task functionalJavaAnalysisTest(type: Test) {
+    useJUnitPlatform()
+
+    filter {
+        includeTestsMatching('cloud.filibuster.functional.java.analysis.*')
+    }
+}
+
+task functionalJavaLatencyTest(type: Test) {
+    useJUnitPlatform()
+
+    filter {
+        includeTestsMatching('cloud.filibuster.functional.java.latency.*')
+    }
+}
+
+task functionalJavaCompositionalTest(type: Test) {
+    useJUnitPlatform()
+
+    filter {
+        includeTestsMatching('cloud.filibuster.functional.java.compositional.*')
+    }
+}
+
+task functionalPythonTest(type: Test) {
+    useJUnitPlatform()
+
+    filter {
+        includeTestsMatching('cloud.filibuster.functional.python.*')
+    }
+}
+
+task functionalDockerTest(type: Test) {
+    useJUnitPlatform()
+
+    filter {
+        includeTestsMatching('cloud.filibuster.functional.docker.*')
+    }
+}
